--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,16 @@
 -e .
 
 # external requirements
-click
-Sphinx
-coverage
-awscli
+# click
+# Sphinx
+# coverage
+# awscli
 flake8
 python-dotenv>=0.5.1
+black
+mlflow
+dagshub
+numpy
+nltk
+pandas
+scikit-learn
